# Valups

./: CMakeLists.txt
src/: main.cpp
src/core/: screen-parser.cpp  screen-parser.hpp
